# isPalindrome

./: .bazelignore  .bazelrc  .gitattributes  .gitignore  BUILD.bazel  CONTRIBUTING.md  Cargo.toml  MODULE.bazel  README.md  SPEC.md  foo.cs  visibility.bzl
.cursor/rules/: strict-tdd.mdc
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.github/workflows/: ci.yml
CLI/: BUILD.bazel  Cargo.toml
CLI/src/: lib.rs
CLI/tests/: cli_integration.rs  cli_unit.rs
c/: CMakeLists.txt
c/include/: is_palindrome.h
c/src/: is_palindrome.c  pal_stdin.c
c/tests/: acceptance_manifest.c
cpp/: CMakeLists.txt
cpp/include/: IsPalindrome.hpp
cpp/src/: IsPalindrome.cpp  pal_stdin.cpp
cpp/tests/: acceptance_tests.cpp
cs/: IsPalindrome.cs  IsPalindrome.csproj  isPalindrome.sln
cs/IsPalindrome.Tests/: AcceptanceManifestTests.cs  IsPalindrome.Tests.csproj
cs/PalCli/: PalCli.csproj  Program.cs
docs/: testing.md
fixtures/: BUILD.bazel  README.md  __init__.py  acceptance_manifest.json  acceptance_manifest_cli.bzl  acceptance_manifest_cli_test.sh  acceptance_matrix.md  bazel_acceptance_main.py  cli_paths_test.py  manifest_cases.py
fixtures/cli/: __init__.py  __main__.py  _paths.py  acceptance_cmd.py  check.py  engine.py  main.py  native_cmd.py  parse.py  test_smoke.py  thin.py
nodejs/is-palindrome/: isPalindrome.js  package-lock.json  package.json  pal-cli.mjs
nodejs/is-palindrome/test/: acceptance_manifest.test.js
py/is_palindrome/: __init__.py  cmake_cache_compat.py  palindrome.py
py/tests/: test_acceptance.py  test_build_scripts_exist.py  test_c_cmake_includes_cjson.py  test_cmake_cache_compat.py  test_phase1_manifest_logging.py  test_run_all_select_argv.py  test_run_all_tests_banner.py
rust/is_palindrome/: Cargo.toml
rust/is_palindrome/src/: cli.rs  lib.rs
rust/is_palindrome/tests/: acceptance_manifest.rs  cli_integration.rs
src/c/: BUILD.bazel
src/c/include/: is_palindrome.h
src/c/src/: is_palindrome.c  stdin_json_adapter.c
src/c/test/: acceptance_manifest_test.cpp
src/cpp/: BUILD.bazel
src/cpp/include/: IsPalindrome.hpp
src/cpp/src/: IsPalindrome.cpp  stdin_json_adapter.cpp
src/cpp/test/: acceptance_manifest_test.cpp
src/cs/: AcceptanceTest.cs  BUILD.bazel  IsPalindrome.cs  IsPalindrome.csproj  isPalindrome.sln
src/cs/AcceptanceTestCoverage/: AcceptanceTestCoverage.csproj  Program.cs
src/cs/AcceptanceTestCoverage/IsPalindromeLib/: IsPalindromeLib.csproj
src/cs/StdinJsonAdapter/: Program.cs  StdinJsonAdapter.csproj
src/nodejs/ispalindrome/: BUILD.bazel  acceptance_manifest.test.mjs  isPalindrome.js  package-lock.json  package.json  pnpm-lock.yaml  stdin-json-adapter.mjs
src/py/: BUILD.bazel
src/py/is_palindrome/: __init__.py  palindrome.py  stdin_json_adapter.py
src/py/tests/: acceptance_test.py
src/rust/is_palindrome/: BUILD.bazel  Cargo.toml
src/rust/is_palindrome/src/: lib.rs
src/rust/is_palindrome/tests/: acceptance_manifest_test.rs
tools/: BUILD.bazel  bazel-coverage.sh  bazel_coverage_html.sh  build_all.sh  check_toolchain.py  clean_build_all.sh  coverage_html_cs_row_test.sh  coverage_report.sh  coverage_report_pnpm_bootstrap_test.sh  coverage_report_syntax_test.sh  coverage_sources.bzl  host_toolchains.sh  host_toolchains_policy_test.sh  manifest_coverage_python_html.sh  normalize_coverage_paths.py  normalize_coverage_paths_test.sh  run_all_tests.py  test_suites.json  validate_host_toolchains.sh
tools/coverage/: BUILD.bazel  coverage_all.sh  coverage_html.sh  cs_coverage.sh  rust_llvm_tools.bzl
tools/coverage/.config/: dotnet-tools.json
tools/testdata/coverage_normalize/: sample_cobertura.xml  sample_proc_cwd.lcov
