[package]
name = "is_palindrome_cli"
version = "0.1.0"
edition = "2021"
description = "Canonical IsPalindromeCLI (argv, backends, JSON I/O)."
publish = false

[dependencies]
is_palindrome = { path = "../src/rust/is_palindrome" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
which = "6"

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "stdin_json_adapter"
path = "src/bin/stdin_json_adapter.rs"

[[bin]]
name = "is_palindrome_cli"
path = "src/bin/is_palindrome_cli.rs"
