load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library", "cc_test")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "is_palindrome_lib",
    srcs = ["src/is_palindrome.c"],
    hdrs = ["include/is_palindrome.h"],
    includes = ["include"],
)

cc_binary(
    name = "stdin_json_adapter",
    srcs = ["src/stdin_json_adapter.c"],
    deps = [
        ":is_palindrome_lib",
        "@cjson//:cjson",
    ],
)

cc_test(
    name = "acceptance_test",
    size = "small",
    srcs = ["test/acceptance_manifest_test.cpp"],
    copts = ["-std=c++20"],
    data = ["//fixtures:acceptance_manifest.json"],
    deps = [
        ":is_palindrome_lib",
        "@catch2//:catch2_with_main",
        "@cjson//:cjson",
    ],
)
