load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library", "cc_test")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "is_palindrome_lib",
    srcs = ["src/IsPalindrome.cpp"],
    hdrs = ["include/IsPalindrome.hpp"],
    includes = ["include"],
)

cc_binary(
    name = "stdin_json_adapter",
    srcs = ["src/stdin_json_adapter.cpp"],
    deps = [
        ":is_palindrome_lib",
        "@nlohmann_json//:nlohmann_json",
    ],
)

cc_test(
    name = "acceptance_test",
    size = "small",
    srcs = ["test/acceptance_manifest_test.cpp"],
    copts = ["-std=c++20"],
    data = ["//fixtures:acceptance_manifest.json"],
    deps = [
        ":is_palindrome_lib",
        "@catch2//:catch2_with_main",
        "@nlohmann_json//:nlohmann_json",
    ],
)
