load(":rust_llvm_tools.bzl", "rust_llvm_coverage_tools")
load("//:visibility.bzl", "TOOLS_COVERAGE")

package(default_visibility = ["//visibility:private"])

# Polyglot coverage is orchestrated by shell scripts run from the **repository root** (CI / dev host),
# e.g. ``./tools/bazel-coverage.sh``. Do **not** wrap those scripts in ``sh_binary`` + ``bazel run``:
# they call ``bazel build`` / ``bazel coverage`` internally, and nested Bazel breaks action-graph isolation
# and can deadlock on the server lock.
#
# Runnable scripts (source of truth): ``coverage_html.sh``, ``coverage_all.sh``, ``cs_coverage.sh``
# (see ``exports_files`` below). Build-only helper: ``//tools/coverage:rust_llvm_tools`` (llvm-cov paths).

rust_llvm_coverage_tools(
    name = "rust_llvm_tools",
)

exports_files(
    [
        "BUILD.bazel",
        "coverage_all.sh",
        "coverage_html.sh",
        "cs_coverage.sh",
        ".config/dotnet-tools.json",
    ],
    visibility = TOOLS_COVERAGE,
)
